--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bsifipp.appgeolocalizador">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppGeolocalizador">
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAHpg-1KXM7DF2WT-bpkb1KKEaaIjIfmTo"/>
+        <activity
+            android:name=".activities.ActivityMaps"
+            android:exported="false" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAHpg-1KXM7DF2WT-bpkb1KKEaaIjIfmTo" />
+
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
